# bidreader

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LAUNCH.md  PAPER.md  README.md  demo.py  make_sample.py  pyproject.toml  release.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmark/: README.md  SCORECARD.md  cases.py  generate.py  run.py  scorecard.json
benchmark/expected/: clean_no_exclusions.json  drywall_quote.json  gc_multitrade.json  quote_with_errors.json  spec_prose_exclusions.json
bidreader/: __init__.py  cli.py  extract.py  leveling.py  mcp_server.py  ocr.py
demo/: ESTIMATOR_SIM.md  EVIDENCE.md  README.md  REAL_EVIDENCE.md  audit.py  corpus_index.json  estimator_sim.py  leveling_drywall.xlsx  leveling_electrical.xlsx  make_corpus.py  real_eval.json  real_eval.py  run_eval.py
demo/expected/: concrete_multipage.json  demo_scanned_messy.json  dw_sub_a.json  dw_sub_b.json  dw_sub_c.json  elec_sub_a.json  elec_sub_b.json  elec_sub_c.json  elec_sub_d.json  hvac_scanned.json  painting_clean.json  plumbing_quote.json  roofing_spec.json  steel_errors.json
demo/real/: README.md
docs/: FREE_MODELS.md  LOCAL_MODELS.md  MCP.md  RESULTS.md
examples/: leveling_demo.xlsx  make_leveling_sample.py  run_example.py  sample_output.json  sample_output.txt
tests/: test_offline.py
