[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bidreader"
version = "0.9.2"
description = "Read messy construction sub-quotes, bid packages & spec PDFs into clean structured data — and catch the scope gaps/exclusions vendors bury. Every value cited to its page."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anmol", email = "anmol@attentive.ai" }]
keywords = ["construction", "estimating", "takeoff", "subcontractor", "bid", "quote",
            "scope", "exclusions", "spec", "AEC", "preconstruction", "BOQ", "LLM", "MCP"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["pymupdf>=1.24", "certifi>=2024.0"]

[project.optional-dependencies]
tables = ["pdfplumber>=0.11"]
xlsx = ["openpyxl>=3.1"]
ocr = ["pytesseract>=0.3.10", "pillow>=10"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8", "openpyxl>=3.1"]

[project.scripts]
bidreader = "bidreader.cli:main"
bidreader-mcp = "bidreader.mcp_server:main"

[project.urls]
Homepage = "https://github.com/anmolsam/bidreader"
Issues = "https://github.com/anmolsam/bidreader/issues"

[tool.setuptools.packages.find]
include = ["bidreader*"]
